fix: cards spacing, and links again

--- a/c21-linktree/css/style.css
+++ b/c21-linktree/css/style.css
@@ -110,7 +110,7 @@ body {
 }
 
 .card {
-  @apply flex cursor-pointer flex-row flex-nowrap items-center justify-center gap-3 rounded-3xl bg-white p-3 text-black;
+  @apply flex cursor-pointer flex-row flex-nowrap items-center justify-center gap-3 rounded-3xl bg-white p-3 text-black h-full;
   @apply sm:gap-5;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: var(--transition);
